# network-shaping

./: .gitignore  README.md  benchmark.py  cloudflare_hourly.json  evaluate.py  main.py  plot.py  pyproject.toml
configs/v1_wide/: level1_basic.yaml  level2_bursty.yaml  level3_chaotic.yaml  level4_realworld.yaml
configs/v2_narrow/: level1_basic.yaml  level2_bursty.yaml  level3_chaotic.yaml  level4_realworld.yaml
data/: plot_network_results.py
data/traffic/: cloudflare_history_training.json
docs/: commands.md  debug_report.md  spec.md
ns-3.36/contrib/network-shaping/: bridge-env.cc  bridge-env.h  network-shaping-simulation.cc  rate-limiter-queue-disc.cc  rate-limiter-queue-disc.h  traffic-generator.cc  traffic-generator.h
src/agents/: ppo_agent.py
src/environments/: metrics.py  ns3_env.py
src/evaluation/: __init__.py  ab_test.py
src/traffic/: cloudflare_loader.py
src/utils/: pipe_bridge.py  tester.py
src/visualization/: __init__.py  plotting.py
